<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Background Image -->
    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_modern_light"
        android:contentDescription="@string/BgImage"/>

    <!-- Transparent Overlay for readability -->
    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#20000000" />
    <!-- Foreground content -->
    <LinearLayout
        android:orientation="vertical"
        android:padding="24dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <!--Login Image-->
    <ImageView
        android:id="@+id/image"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginBottom="24dp"

        android:src="@drawable/spalsh_fit_track"
        android:scaleType="centerCrop"
        android:background="@drawable/circle_background"
        android:contentDescription="@string/LoginImage" />
    <EditText
        android:id="@+id/emailInput"
        android:hint="@string/E_mail"
        android:autofillHints="emailAddress"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        />

    <EditText
        android:id="@+id/passwordInput"
        android:hint="@string/Password"
        android:autofillHints="password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:minHeight="48dp"/>

    <Button
        android:id="@+id/registerButton"
        android:text="@string/register"
        android:textColor="#C40E425B"
        android:textSize="18sp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_button"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:elevation="4dp"
        android:fontFamily="@font/roboto_semicondensed_medium" />

    <TextView
        android:id="@+id/loginLink"
        android:text="@string/String4"
        android:gravity="center"
        android:textColor="@color/dark_on_primary"
        android:clickable="true"
        android:focusable="true"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:padding="8dp"/>
    </LinearLayout>
</FrameLayout>
