<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cornerRadius="28dp"
    android:background="?attr/colorSurface">



    <!-- Background image -->
    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_modern_light"
        android:contentDescription="@string/BgImage" />

    <!-- Transparent overlay -->
    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#20000000" />

    <!-- Foreground layout -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:layout_gravity="center">

    <!-- Quote text -->
    <TextView
        android:id="@+id/quoteText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/quote_text"
        android:textSize="20sp"
        android:textStyle="italic"
        android:textAlignment="center"
        android:layout_marginBottom="32dp"
        android:textColor="?attr/colorOnSurface"
        android:fontFamily="@font/roboto_medium"
        android:contentDescription="@string/bg_image_desc"/>

    <!-- New Quote button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/newQuoteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/new_quote"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:fontFamily="@font/roboto_medium"
        app:cornerRadius="24dp"
        android:paddingHorizontal="36dp"
        android:paddingVertical="12dp"
        app:backgroundTint="?attr/colorPrimary"
        android:textColor="?attr/colorOnPrimary"
        android:elevation="6dp" />
   </LinearLayout>
</FrameLayout>