<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Background Image -->
    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_modern_light"
        android:contentDescription="@string/BgImage" />


    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#20000000" />

    <!-- Foreground content -->
    <LinearLayout
        android:orientation="vertical"
        android:padding="24dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Step Progress Indicator -->
        <FrameLayout
            android:layout_width="250dp"
            android:layout_height="250dp">

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/stepProgress"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:indicatorColor="@color/colorPrimary"
                app:indicatorSize="10dp"
                app:trackColor="@android:color/darker_gray"
                app:trackThickness="16dp"
                app:max="10000"
                app:progress="0" />

            <!-- Steps count inside circle -->
            <TextView
                android:id="@+id/stepCountView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/Zero"
                android:textColor="@android:color/black"
                android:textSize="40sp"
                android:textStyle="bold" />

        </FrameLayout>

        <!-- Steps label -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/Steps"
            android:textColor="@color/dark_on_primary"
            android:textSize="20sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/distanceView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:text="@string/km"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/caloriesView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kcal"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>
</FrameLayout>
